# caesium-v3

./: .prettierrc  README.md  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  enhancement.yml  feature_request.yml  missing_v2_feature.yml  question.yml
.github/workflows/: publish.yml
api/: Cargo.toml  tauri.conf.json
api/capabilities/: default.json
api/src/: app_data.rs  commands.rs  compressor.rs  config.rs  lib.rs  scan_files.rs
api/src/commands/: compression.rs  list.rs  mod.rs  post_compression_actions.rs
api/src/errors/: mod.rs
src/: App.tsx  i18n.ts  main.tsx  types.ts
src/assets/css/: App.css
src/components/: AppMenu.tsx  CenterContainer.tsx  DragDropOverlay.tsx  ErrorBoundary.tsx  FileListPagination.tsx  FileListTable.tsx  Footer.tsx  ImportDialog.tsx  ListPanel.tsx  MenuBar.tsx  PreviewCanvas.tsx  PreviewPanel.tsx  SavedLabel.tsx  SidePanel.tsx  Toolbar.tsx
src/components/dialogs/: AboutDialog.tsx  AdvancedImportDialog.tsx  AskDialog.tsx  CompressionProgressDialog.tsx  ImportDialog.tsx  PromptOnExitDialog.tsx  SettingsDialog.tsx  UsageStatsDialog.tsx
src/components/dialogs/settings/: AdvancedSettings.tsx  GeneralSettings.tsx  ImportSettings.tsx
src/components/file-list/: FileListFilter.tsx  FileListTable.tsx  ListPanel.tsx
src/components/preview-panel/: PreviewCanvas.tsx  PreviewPanel.tsx
src/components/side-panel/: CompressionOptions.tsx  OutputOptions.tsx  ResizeOptions.tsx  SidePanel.tsx
src/components/side-panel/compression-options/: GifOptions.tsx  JpegOptions.tsx  PngOptions.tsx  TiffOptions.tsx  WebpOptions.tsx
src/components/ui/: dialog.tsx  resizable.tsx  table.tsx
src/hooks/: useDebounce.ts
src/i18n/: en-US.json  it-IT.json
src/services/: post-compression-actions.ts
src/stores/: app.store.ts  compression-options.store.ts  file-list.store.ts  output-options.store.ts  preview.store.ts  resize-options.store.ts  settings.store.ts  ui.store.ts
src/utils/: invoker.tsx  notification-manager.ts  post-compression-actions.ts  utils.ts
src/workers/: image-loader.ts
