[package]
name = "caesium-image-compressor"
version = "3.0.0-alpha.1"
description = "Caesium is an image compression software that helps you store, send and share digital pictures"
authors = ["Matteo Paonessa"]
edition = "2021"

[lib]
name = "caesium_image_compressor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5"
tauri-plugin-dialog = "2.4"
tauri-plugin-window-state = "2"
sha2 = "0.10"
base16ct = { version = "0.3", features = ["alloc"] }
kamadak-exif = "0.6"
imagesize = "0.14"
file-format = "0.28.0"
indexmap = "2.11"
tauri-plugin-store = "2.4"
libcaesium = "0.19"
serde_repr = "0.1"
rayon = "1.11"
tauri-plugin-os = "2"
system_shutdown = "4"
open = "5.3"
tauri-plugin-process = "2"
trash = "5.2"
tauri-plugin-log = "2"
log = "0.4"
thiserror = "2.0.16"
regex = "1.11.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
